# haskell-practice

./: .gitignore  LICENSE  README.md  hw3-komour.cabal  package.yaml  stack.yaml
bench/: Main.hs
src/: CHT.hs  Comonad19.hs  ConcurrentHashTable.hs  Lenses.hs  Task1.hs  Task1Naive.hs  Task5.hs
test/: AllTests.hs  Main.hs
