name:           hw3-komour
version:        0.1.0.0
description:    Homework 3 for ITMO FP Course

homepage:       https://github.com/fp-ctd-itmo/hw3-komour
license:        MIT
license-file:   LICENSE
author:         Andrey Komarov
maintainer:     komaroff404@gmail.com
copyright:      2020 Andrey Komarov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

test-suite hw3-komour-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 5
                     , hw3-komour
                     , tasty
                     , tasty-hspec
  ghc-options:         -Wall -O69 -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  -- other-modules:       AllTests
